--- a/ExamenRecupperacion/pillar5-n8n/docker-compose.yml
+++ b/ExamenRecupperacion/pillar5-n8n/docker-compose.yml
@@ -1,27 +1,23 @@
-# Pillar 5: n8n Workflow Automation
-# Workflow: recup-flujo-prestamos
-# Webhook: recup_prestamo.notificacion
-
 version: '3.8'
 
 services:
   n8n:
-    image: docker.n8n.io/n8nio/n8n:latest
-    container_name: n8n-recup-prestamos
+    image: n8nio/n8n:latest
+    container_name: recup-n8n
     restart: unless-stopped
     ports:
       - "5678:5678"
     environment:
+      - N8N_BASIC_AUTH_ACTIVE=false
       - N8N_HOST=localhost
       - N8N_PORT=5678
       - N8N_PROTOCOL=http
       - WEBHOOK_URL=http://localhost:5678/
-      - N8N_BASIC_AUTH_ACTIVE=false
-      - N8N_SECURE_COOKIE=false
       - GENERIC_TIMEZONE=America/Guatemala
-      - TZ=America/Guatemala
+      - N8N_DEFAULT_BINARY_DATA_MODE=filesystem
     volumes:
       - n8n_data:/home/node/.n8n
+      - ./workflows:/home/node/.n8n/workflows
     networks:
       - recup-network
 
@@ -31,4 +27,3 @@ networks:
 
 volumes:
   n8n_data:
-    driver: local
